--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background: radial-gradient(circle, rgb(0, 0, 0) 50%, rgb(9, 63, 107) 90%);
     background-size: 300% 300%;
     animation: move-colors 5s forwards infinite;
-    margin-left: 100px;
+    margin-left: 16px;
 }
   
   @keyframes move-colors {
@@ -40,11 +40,11 @@ body {
     justify-content: flex-start;
     opacity: 1;
     transition: opacity 2s ease-in-out;
-    transform: translateY(119px);
+    transform: translateY(50px);
     animation: fadeInAppear 1s ease-in;
     font-family: "HelveticaNowDisplay-ExtraBold", sans-serif;
-    width:80%;
-    font-size: 28px;
+    width:87%;
+    font-size: 30px;
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: nowrap;
@@ -57,11 +57,11 @@ body {
 .projectcontainer{
 
     display: flex;
-    transform: translateY(119px);
+    transform: translateY(50px);
     animation: fadeInAppear 1s ease-in;
     font-family: "HelveticaNowDisplay-ExtraBold", sans-serif;
     width: 80%;
-    font-size: 28px;
+    font-size: 30px;
     flex-direction: column;
     align-items: flex-start;
 
@@ -73,7 +73,7 @@ body {
     display: flex;
     flex-direction: column;
     opacity: 1;
-    transform: translateY(119px);
+    transform: translateY(50px);
     animation: fadeInAppear 1s ease-in;
     margin-bottom: 700px;
     margin-left: 50px;
@@ -86,16 +86,16 @@ body {
     }
     50% {
        opacity: 0;
-       transform: translateY(119px);
+       transform: translateY(50px);
     }
     100% {
         opacity: 1;
-        transform: translateY(119px);
+        transform: translateY(50px);
      }
  } 
 
 .intro.fade-out, .projectcontainer.fade-out{
-    transform: translateY(119px);
+    transform: translateY(50px);
     animation: fadeInDissapear 2s ease-in;
   }
 
@@ -106,19 +106,19 @@ body {
     }
     50% {
        opacity: 0;
-       transform: translateY(119px);
+       transform: translateY(50px);
     }
     100% {
         opacity: 0;
-        transform: translateY(119px);
+        transform: translateY(50px);
      }
  } 
 
 
  .image-container {
-    height: 285px;
-    width: 498px;
-    border-radius: 20px;
+  height: 245px;
+  width: 407px;
+  border-radius: 20px;
 }
 
 article {
@@ -131,11 +131,16 @@ article {
 .shantanu{
     background: linear-gradient(357deg, #010202 6.001%, transparent), url(images/shantanu.png);
     background-size: cover;
-    height: 700px;
+    height: 500px;
     animation: image-appear 6s forwards;
-    width: 700px;
+    width: 550px;
     background-repeat: no-repeat;
     border-radius: 50px;
+}
+
+video {
+  width: 696px;
+  height: 346px;
 }
 
 @keyframes image-appear {
@@ -143,7 +148,7 @@ article {
     height: 0px;
     }
     100% {
-    height: 700px;
+    height: 550px;
       }
     }
 
@@ -171,7 +176,7 @@ a{
 
   .logo{
 
-    height: 300px;
+    height: 278px;
     width: 500px;
   }
 
