--- a/styles.css
+++ b/styles.css
@@ -203,3 +203,59 @@ a{
     border-radius: 30px;
 
   }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.logo {
+  height: 138px;
+  width: 221px;
+}
+.intro{
+  flex-direction: column;
+  align-items: center;
+  width:98%
+}
+
+.projectdescription{
+  width:97%;
+  margin-right: 32px;
+}
+
+video {
+  width: 311px;
+  height: 442px;
+}
+
+.projectcontainer{
+  margin-right: 137px;
+}
+
+.image-container {
+  height: 208px;
+  width: 312px;
+  border-radius: 20px;
+}
+
+input[type="text"],input[type="email"], textarea {
+  width: 280px;
+}
+
+.shantanu{
+  margin-left: -116px;
+}
+
+  }
